--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "d3": "^7.9.0",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "lightweight-charts": "^5.0.3",
     "mathjs": "^11.11.2",
     "next": "^12.2.0",
@@ -29,9 +31,8 @@
     "@types/react": "18.0.15",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
-    "highcharts": "^12.1.2",
-    "highcharts-react-official": "^3.2.1",
     "ignore-loader": "^0.1.2",
+    "null-loader": "^4.0.1",
     "typescript": "^5.8.2"
   }
 }
